<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_films"
            android:icon="@drawable/ic_menu_film"
            android:title="@string/film" />
        <item
            android:id="@+id/nav_series"
            android:icon="@drawable/ic_menu_series"
            android:title="@string/serie" />
        <item
            android:id="@+id/nav_favoris_film"
            android:icon="@drawable/ic_menu_favoris"
            android:title="@string/favoris" />
        <item
            android:id="@+id/nav_favoris_serie"
            android:icon="@drawable/ic_menu_favoris"
            android:title="@string/favoris_serie" />
        <item
            android:id="@+id/nav_parametres"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/param" />
    </group>


</menu>
